# BinPacking-Meta

./: BRKGA_BPPC_1_0_6.txt  BRKGA_BPPC_1_1_6.txt  BRKGA_BPPC_1_3_8.txt  BRKGA_BPPC_1_4_9.txt  BRKGA_BPPC_1_7_9.txt  BRKGA_BPPC_2_0_10.txt  BRKGA_BPPC_2_3_7.txt  BRKGA_BPPC_2_5_5.txt  BRKGA_BPPC_2_6_7.txt  BRKGA_BPPC_2_8_2.txt  BRKGA_BPPC_3_1_6.txt  BRKGA_BPPC_3_3_6.txt  BRKGA_BPPC_3_5_4.txt  BRKGA_BPPC_3_7_2.txt  BRKGA_BPPC_3_8_8.txt  BRKGA_BPPC_4_0_5.txt  BRKGA_BPPC_4_2_5.txt  BRKGA_BPPC_4_4_3.txt  BRKGA_BPPC_4_7_9.txt  BRKGA_BPPC_4_9_4.txt  Bin Packing with Conflicts - Apresentação do problema.pptx  BuscaLocal.cpp  BuscaLocal.h  CMakeCache.txt  CMakeLists.txt  Container.cpp  Container.h  Decoder.cpp  Decoder.h  GRASP.cpp  GRASP.h  GRASP_BPPC_1_0_6.txt  GRASP_BPPC_1_1_6.txt  GRASP_BPPC_1_3_8.txt  GRASP_BPPC_1_4_9.txt  GRASP_BPPC_1_7_9.txt  GRASP_BPPC_2_0_10.txt  GRASP_BPPC_2_3_7.txt  GRASP_BPPC_2_5_5.txt  GRASP_BPPC_2_6_7.txt  (+54 more)
tunning/: .RData  forbidden.txt  instance  irace.Rdata  parameters.txt  scenario.txt  target-runner  teste  teste.lp
tunning/.Rproj.user/4A9671EA/pcs/: files-pane.pper
tunning/arena/: irace.Rdata
tunning/instances/: tELGN-BPWC_7_1_18.txt  ta-BPWC_5_4_10.txt  ta-BPWC_5_7_3.txt  uELGN-BPWC_1_2_20.txt
tunning/source/: Arquivos.cpp  Arquivos.h  Construcao.cpp  Construcao.h  Estruturas.h  Main.cpp  Menus.cpp  Menus.h  Util.cpp  Util.h  makefile
